--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 .purple {
   /* TODO: Add some style definitions for the purple class in here... */
-}
+  	color: purple;
+  }
 
 /* #answer-display will have black text on a white background.
    Hovering the mouse over it will reveal the text */
