--- a/index.css
+++ b/index.css
@@ -6,9 +6,9 @@
 /* #answer-display will have black text on a white background.
    Hovering the mouse over it will reveal the text */
 #answer-display {
-  background-color: #000;
+  background-color: #ffffff;
 }
 
 #answer-display:hover {
-  color: #fff;
+  color: #ad0cf2;
 }
